--- a/open_when.html
+++ b/open_when.html
@@ -6,19 +6,17 @@
 <title>Open When</title>
 <style>
 /* --- Фон на весь экран --- */
-html, body {
-  height: 100%;
+
+ body {
+  background: linear-gradient(120deg, #ffe6f0, #ffd9ec, #ffe0f5);
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(120deg, #ffe6f0, #ffd9ec, #ffe0f5);
-  background-attachment: fixed; /* фон не движется при скролле */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
 }
+
 
 /* --- Главный заголовок --- */
 h1 {
@@ -71,7 +69,7 @@ h1 {
   border-radius: 20px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
   animation: fadeIn 0.5s ease forwards;
-  margin-bottom: 40px;
+
 }
 
 @keyframes fadeIn {
@@ -109,21 +107,6 @@ h1 {
 .back-btn:hover {
   transform: scale(1.05) rotate(-2deg);
   box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-}
-
-/* --- Адаптив под мобилку --- */
-@media (max-width: 480px) {
-  .btn {
-    flex: 1 1 90%;
-    font-size: 14px;
-    padding: 12px;
-  }
-  .card p {
-    font-size: 1em;
-  }
-  .card img {
-    max-width: 100%;
-  }
 }
 
   /* Сбрасываем выделение и outline на всех кнопках */
