--- a/open_when.html
+++ b/open_when.html
@@ -392,8 +392,51 @@ button {
 <div id="ramadanStart" class="card">
   <h1>when Ramadan begins</h1>
   <p>Ramadan Kareem 🌙✨! Wishing you peaceful days and meaningful moments. I'm thinking of you and sending warm vibes</p>
-  <img src="images/ramadan_start.jpg" alt="Open when Ramadan begins">  
-  <button class="back-btn" onclick="goBack()">back</button>
+  
+  <!-- КРАСИВАЯ ССЫЛКА НА YOUTUBE -->
+  <div style="margin: 25px 0; text-align: center;">
+    <a href="https://youtube.com/shorts/Y4KktV6SdOc?si=UM8y-GTu95-zPUnl" 
+       target="_blank" 
+       style="
+         display: inline-flex;
+         align-items: center;
+         justify-content: center;
+         gap: 12px;
+         background: linear-gradient(145deg, #f9f1f1, #fff5f5);
+         padding: 14px 28px;
+         border-radius: 60px;
+         text-decoration: none;
+         color: #b23b4b;
+         font-size: 1.1em;
+         font-weight: 500;
+         border: 1.5px solid #ffccd5;
+         box-shadow: 0 6px 16px rgba(210, 120, 140, 0.12);
+         transition: all 0.25s ease;
+       "
+       onmouseover="this.style.background='#fff0f2'; this.style.borderColor='#ff99aa'; this.style.transform='scale(1.02)'; this.style.boxShadow='0 12px 22px rgba(210, 100, 120, 0.18)';"
+       onmouseout="this.style.background='linear-gradient(145deg, #f9f1f1, #fff5f5)'; this.style.borderColor='#ffccd5'; this.style.transform='scale(1)'; this.style.boxShadow='0 6px 16px rgba(210, 120, 140, 0.12)';">
+      
+      <span style="
+        background: #ff4d4d;
+        color: white;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+      ">▶️</span>
+      
+      <span style="display: flex; flex-direction: column; align-items: flex-start; line-height: 1.3;">
+        <span style="font-weight: 600; color: #a13e4e;">Ramadan Kareem ✨</span>
+        <span style="font-size: 0.85em; color: #7f4a5c;">a little something for you →</span>
+      </span>
+    </a>
+  </div>
+  
+  <img src="images/ramadan_start.jpg" alt="Open when Ramadan begins" style="border: 5px solid #ffccd5; border-radius: 30px; max-width: 90%;">
+  <button class="back-btn" onclick="goBack()" style="margin-top: 20px;">back</button>
 </div>
 
 <div id="ramadanEnd" class="card">
