--- a/open_when.html
+++ b/open_when.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -229,7 +228,7 @@ button {
 <!-- 🌸 ВСТУПИТЕЛЬНЫЙ БЛОК (ВМЕСТО КОНВЕРТОВ) 🌸 -->
 <div id="welcomeSection" class="welcome-section">
   <div class="welcome-heart">💌</div>
-  <h1 class="welcome-title">open when...</h1>
+  <h1 class="welcome-title">Open when...</h1>
   
   <p class="welcome-text">
     Distance is just a number, but love doesn't measure in kilometers. <br>
@@ -343,8 +342,52 @@ button {
 <div id="dictatorMovie" class="card">
   <h1>when you watch The Dictator</h1>
   <p>Time for some Alisson Burgers 🍔 or a reminder that Employees Mustwashhaands 🧼😆 Laugh a little 🎬 I'm laughing with you too 💖</p>
-  <img src="images/dictator.jpg" alt="Open when you watch The Dictator"> 
-  <button class="back-btn" onclick="goBack()">back</button>
+  
+  <!-- ССЫЛКА НА YOUTUBE В СТИЛЕ ДИКТАТОРА -->
+  <div style="margin: 25px 0; text-align: center;">
+    <a href="https://www.youtube.com/shorts/vpkZAaUGF2M" 
+       target="_blank" 
+       style="
+         display: inline-flex;
+         align-items: center;
+         justify-content: center;
+         gap: 12px;
+         background: linear-gradient(145deg, #1a1a1a, #2d2d2d);
+         padding: 14px 28px;
+         border-radius: 60px;
+         text-decoration: none;
+         color: #ffd700;
+         font-size: 1.1em;
+         font-weight: 500;
+         border: 1.5px solid #c0c0c0;
+         box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
+         transition: all 0.25s ease;
+       "
+       onmouseover="this.style.background='#2a2a2a'; this.style.borderColor='#ffd700'; this.style.transform='scale(1.02)'; this.style.boxShadow='0 12px 22px rgba(0, 0, 0, 0.35)';"
+       onmouseout="this.style.background='linear-gradient(145deg, #1a1a1a, #2d2d2d)'; this.style.borderColor='#c0c0c0'; this.style.transform='scale(1)'; this.style.boxShadow='0 6px 16px rgba(0, 0, 0, 0.25)';">
+      
+      <span style="
+        background: #ffd700;
+        color: #1a1a1a;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: bold;
+      ">👑</span>
+      
+      <span style="display: flex; flex-direction: column; align-items: flex-start; line-height: 1.3;">
+        <span style="font-weight: 600; color: #ffd700;">Aladeen news! 🎬</span>
+        <span style="font-size: 0.85em; color: #e0e0e0;">funny clips for you →</span>
+      </span>
+    </a>
+  </div>
+  
+  <img src="images/dictator.jpg" alt="Open when you watch The Dictator" style="border: 5px solid #ffccd5; border-radius: 30px; max-width: 90%;">
+  <button class="back-btn" onclick="goBack()" style="margin-top: 20px;">back</button>
 </div>
 
 <div id="visa" class="card">
@@ -454,7 +497,7 @@ button {
 </div>
 
 <div id="valentines" class="card">
-  <h1>💘 happy Valentine's Day, my love 💘</h1>
+  <h1>💘 Happy Valentine's Day, my love 💘</h1>
   
   <div style="font-size: 80px; animation: heartbeat 1.2s ease-in-out infinite; margin: 10px 0;">
     ❤️
