--- a/open_when.html
+++ b/open_when.html
@@ -513,7 +513,7 @@ button {
     Happy Valentine's Day, Ahmed! 💌
   </p>
   
-  <img src="images/lelo.jpg" alt="Happy Valentine's Day" style="border: 5px solid #ffccd5; border-radius: 30px;">
+  <img src="images/valentine.jpg" alt="Happy Valentine's Day" style="border: 5px solid #ffccd5; border-radius: 30px;">
   
   <p style="font-size: 1.3em; margin-top: 20px;">
     🥂 To us, to love, and to the day we're finally together. 🥂
