--- a/open_when.html
+++ b/open_when.html
@@ -263,7 +263,7 @@ button {
   <button class="btn" onclick="openCard('leloMischief')">🐶 when Lelo is up to mischief</button>
   <button class="btn" onclick="openCard('clientsCrazy')">😤 when clients drive you crazy</button>
   <button class="btn" onclick="openCard('gym')">🏋️ when you hit the gym</button>
-  <button class="btn" onclick="openCard('dictatorMovie')">🍔 when you watch The Dictator</button>
+  <button class="btn" onclick="openCard('dictatorMovie')">🍔 when you want to watch The Dictator</button>
   <button class="btn" onclick="openCard('visa')">🛂 when you get your Russian visa</button>
   <button class="btn" onclick="openCard('yellowCar')">🚗 when you spot a yellow car first</button>
   <button class="btn" onclick="openCard('dubai')">☀️ when Dubai feels too hot</button>
@@ -538,30 +538,6 @@ button {
 <div id="sick" class="card">
   <h1>when you feel sick</h1>
   <p>Aw, feeling under the weather 🤒? Rest up, drink something warm, and imagine I'm bringing you soup and silly jokes to cheer you up</p>
-  
-  <!-- МЕМ ПРО БОЛЕЗНЬ (ВМЕСТО КАРТИНКИ) -->
-  <div style="margin: 20px 0; width: 100%;">
-    <img 
-      src="https://media1.tenor.com/m/0cP70D0nF8UAAAAC/sick-cat.gif" 
-      alt="sick cat" 
-      style="
-        max-width: 100%;
-        border-radius: 30px;
-        border: 5px solid #ffe0e5;
-        box-shadow: 0 15px 30px rgba(180, 100, 120, 0.15);
-        margin-bottom: 10px;
-      "
-    >
-    <p style="
-      font-size: 0.9em; 
-      color: #a15c6e; 
-      margin-top: 5px; 
-      font-style: italic;
-      opacity: 0.8;
-    ">
-      🐱 me right now (but you're handling it better)
-    </p>
-  </div>
 
   <!-- ЗАГОЛОВОК ДЛЯ ШУТОК -->
   <div style="
